feat: Redis - WalDecorator